--- a/portfolio-react/package.json
+++ b/portfolio-react/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^1.1.2"
   },
