--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -25,11 +25,9 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install -g yarn
-    - name: yarn install, build and test
+    - name: npm build and test
       run: |
-        yarn install
-        yarn build
+        npm run build
     - name: Archive Build
       uses: actions/upload-artifact@v2
       with:
